<resources>
    <string name="app_name">Chamena</string>

    <!--  Todo:For Login  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="no_account">Doesn\'t have an account?</string>
    <string name="already_account">Already have an account?</string>
    <string name="name">Full Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>