<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:autofillHints="emailAddress"
                android:focusedByDefault="false"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputborder"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/grey"
            app:boxStrokeWidthFocused="0dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:background="@drawable/inputborder"
                android:hint="@string/password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textColor="@color/my_blue"
            android:text="@string/forgot"
            android:textStyle="bold"
            android:textSize="@dimen/text_button"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_font"
            android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/default_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
            android:textColor="@color/my_blue"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_button"
            />

    </LinearLayout>


    </LinearLayout>



</LinearLayout>